--- a/client/client.jade
+++ b/client/client.jade
@@ -66,7 +66,7 @@ template(name='home')
             each result_tags
                 +tag_picker
             .ui.hidden.divider
-            .ui.three.column.centered.grid
+            .ui.two.column.centered.grid
                 each posts
                     +post_card_small
                 
@@ -123,6 +123,7 @@ template(name='post_card_small')
             i.thumbs.up.outline.icon
             |#{comment_count}
             i.chat.outline.icon
+            .ui.basic.label #{subreddit}
             each five_tags
                 +flat_tag_picker
             a(href=permalink target='_window') #{domain}
